io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/illegalcalltofromcontract2/Caller.java
package io.hotmoka.examples.errors.illegalcalltofromcontract2;

public class Caller {

	public void m() {
		new C().entry(); // KO
	}
}